# kafka-to-http

./: Cargo.toml  README.md
src/: lib.rs  main.rs
