[package]
name = "kafka-to-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9.0"
rayon = "1.8.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.8"
